<resources>
    <string name="app_name">MedicalReminder</string>
    <string name="user_name">Username</string>
    <string name="med_name">Medicine Name</string>
    <string name="pill_left">Pill(s) left</string>
    <string name="strngth">Strength</string>
    <string name="add_med">Add a med</string>
    <string name="active_meds">Active meds</string>
    <string name="inactive_meds">Inactive meds</string>
    <string name="email">Email</string>
    <string name="invite">Invite</string>
    <string name="add">Add</string>
    <string name="Whatmed">What med would you like to add?</string>
    <string name="entrmedname">Enter med name</string>
    <string name="entrmedform">Enter med form</string>
    <string name="entrmedstrength">Enter med strength</string>

    <string name="whatform">What form is the med?</string>
    <string name="whatstrength">What strength is the med?</string>

    <string name="welcome">Welcome</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>




    <string name="signin">SignIn</string>

    <string name="welcome_back">welcome Back</string>

    <string name="password">Password</string>

    <string name="signup">Signup</string>

    <string name="forget_password">Forget Password?</string>

    <string name="or">OR</string>

    <string name="gender">Gender</string>

    <string name="male">Male</string>

    <string name="female">Female</string>

    <string name="date_of_birth">Date of birth</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="splash">Medication Reminder</string>
    <string name="next">Next</string>
    <string name="enter">Enter Tracker Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1">What med would you like to add?</string>
    <string name="q2">What form is the med?</string>
    <string name="q3">Do you need to take this med everyday?</string>
    <string name="q4">How often do you take it?</string>
    <string name="q5">On which day(s) do you need to take this med?</string>
    <string name="q6">How many pills do you have in your stock?</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add_med">Add Medication</string>
    <string name="title_med">Medication</string>
    <string name="pill">Pill</string>
    <string name="injection">Injection</string>
    <string name="powder">Powder</string>
    <string name="drops">Drops</string>
    <string name="inhaler">Inhaler</string>
    <string name="others">Others</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="only_as_needed">Only as needed</string>
    <string name="once_day">Once day</string>
    <string name="twice_day">Twice day</string>
    <string name="_3_times_a_day">3 times a day</string>
    <string name="_4_times_a_day">4 times a day</string>
    <string name="_6_times_a_day">6 times a day</string>
    <string name="every_6_hours">Every 6 hours</string>
    <string name="once_a_week">Once a week</string>
    <string name="every_2_days">Every 2 days</string>
    <string name="_2_days_a_week">2 days a week</string>
    <string name="_3_days_a_week">3 days a week</string>
    <string name="every_28_days">Every 28 days</string>
    <string name="_4_days_a_week">4 days a week</string>
    <string name="title_add">Add Medication</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_setting">Setting</string>
    <string name="drug_name">Panadol</string>
    <string name="button_suspend">Suspend</string>
    <string name="button_refill">Refill</string>
    <string name="drug_quantity">2 mg</string>
    <string name="drug_lastTaken">Last taken</string>
    <string name="drug_day">Today, 6 Mar, 12:20</string>
    <string name="drug_reminders">Reminders</string>
    <string name="drug_reminder_details">Every day, take for 7 days</string>

    <string name="edit_drug">Edit Medication</string>
    <string name="done">Done</string>
    <string name="medication_name">Medication Name</string>
    <string name="reminder_times">Reminder Times</string>
    <string name="take_as_needed">Take as needed</string>
    <string name="one_day">One daily</string>
    <string name="time">12:00</string>
    <string name="take">Take</string>
    <string name="takePills">Take 1 Stick(s)</string>

    <string name="schedule">Schedule</string>
    <string name="take_schedule">Every day, take for 4 days</string>
    <string name="start_date">Start date:</string>
    <string name="date">Yesterday, 7 Mar</string>
    <string name="duration">Duration</string>
    <string name="radio_duration_name1">ongoing treatment</string>
    <string name="radio_duration_name2">number of days</string>
    <string name="days">Days</string>
    <string name="radio_days_name1">Every Day</string>
    <string name="radio_days_name2">days interval</string>

    <string name="strength">Strength</string>
    <string name="value_strength">2 IU</string>
    <string name="medication_strength">Medication strength:</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_question">Should this be taked with food?</string>
    <string name="instructions_radio1">Before eating</string>
    <string name="instructions_radio2">While eating</string>
    <string name="instructions_radio3">After eating</string>
    <string name="instructions_radio4">Doesn\'t matter</string>
    <string name="signout">SignOut</string>
    <string name="health_tracker">Health Tracker</string>

    <string name="channel">My Channel</string>

    <string name="channel_desc">My Channel Desc</string>
    <string name="create_new_account">Create new account.</string>
    <string name="skip">Skip</string>
    <string name="snooze">Snooze</string>
    <string name="how_many_pill_s_do_you_have_left">how many pill(s) do you have left?</string>
    <string name="startdate">StartDate: </string>
    <string name="weeks">weeks</string>
    <string name="start_time">Start Time:</string>
    <string name="title_activity_refill_dialog">RefillDialog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="total_of_pills">Total of Pills</string>
</resources>