<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/shape_oval"

    android:layout_height="match_parent"
    tools:context=".medicationsmanaging.view.MedicationsFragment"
    android:orientation="vertical">
    <include layout="@layout/medications_header"/>

    <TextView
        android:id="@+id/activeTxt"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/active_meds"
        android:layout_width="match_parent"
        android:layout_weight="0.06"
        android:layout_height="0dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.43"/>


    <TextView
        android:id="@+id/inactiveTxt"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/inactive_meds"
        android:layout_width="match_parent"
        android:layout_weight="0.06"
        android:layout_height="0dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.43"/>
    <Button
        android:id="@+id/addBtn"
        android:layout_width="280dp"
        android:text="@string/add_med"

        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#808080"
        android:layout_weight="0.02"/>

</LinearLayout>