<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/q4"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/view_q5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_q5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_corner_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.7" >


        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/once_a_week"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_q5"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/text1"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/every_2_days"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/text2"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_2_days_a_week"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="@id/line2"
            app:layout_constraintTop_toTopOf="@id/line2"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/text3"
            app:layout_constraintTop_toBottomOf="@id/text3"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_3_days_a_week"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="@id/line3"
            app:layout_constraintTop_toTopOf="@id/line3"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/line4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/text4"
            app:layout_constraintTop_toBottomOf="@id/text4"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/every_28_days"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="@id/line4"
            app:layout_constraintTop_toTopOf="@id/line4"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/line5"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/text5"
            app:layout_constraintTop_toBottomOf="@id/text5"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_4_days_a_week"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="@id/line5"
            app:layout_constraintTop_toTopOf="@id/line5"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/line6"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/text6"
            app:layout_constraintTop_toBottomOf="@id/text6"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/only_as_needed"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="@id/line6"
            app:layout_constraintTop_toTopOf="@id/line6"
            app:layout_constraintWidth_percent="0.8" />

        <Button
        android:id="@+id/inviteBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:backgroundTint="#808080"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="669dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>